; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_member.c_dlm_remove_member.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_member.c_dlm_remove_member.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dlm_ls = type { i32, i32 }
%struct.dlm_member = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dlm_ls*, %struct.dlm_member*)* @dlm_remove_member to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dlm_remove_member(%struct.dlm_ls* %0, %struct.dlm_member* %1) #0 {
  %3 = alloca %struct.dlm_ls*, align 8
  %4 = alloca %struct.dlm_member*, align 8
  store %struct.dlm_ls* %0, %struct.dlm_ls** %3, align 8
  store %struct.dlm_member* %1, %struct.dlm_member** %4, align 8
  %5 = load %struct.dlm_member*, %struct.dlm_member** %4, align 8
  %6 = getelementptr inbounds %struct.dlm_member, %struct.dlm_member* %5, i32 0, i32 0
  %7 = load %struct.dlm_ls*, %struct.dlm_ls** %3, align 8
  %8 = getelementptr inbounds %struct.dlm_ls, %struct.dlm_ls* %7, i32 0, i32 1
  %9 = call i32 @list_move(i32* %6, i32* %8)
  %10 = load %struct.dlm_ls*, %struct.dlm_ls** %3, align 8
  %11 = getelementptr inbounds %struct.dlm_ls, %struct.dlm_ls* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* %11, align 4
  ret void
}

declare dso_local i32 @list_move(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
